@@ -8,13 +8,18 @@ actions.recentScripts = Recent Scripts
 actions.exit = Exit!
 
 edit = Edit
+edit.addChannel = Add Channel
+edit.createMidiDevice = Create MIDI Device...
+edit.createMidiDevice.tt = Create new MIDI input device
+edit.createAudioDevice = Create Audio Device...
+edit.createAudioDevice.tt = Create new audio output device
 edit.preferences = Preferences...
 edit.preferences.tt = Preferences
 
-devices.createMidiDevice = Create MIDI Device
-devices.createMidiDevice.tt = Create new MIDI input device
-devices.createAudioDevice = Create Audio Device
-devices.createAudioDevice.tt = Create new audio output device
+view = View
+view.toolBar = Toolbar
+view.sidePane = Side Pane
+view.devicesPane = Devices Pane
 
 window = Window
 window.lsConsole = LS Console
